align fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
 	--bg-gradient: linear-gradient(to bottom, hsl(var(--hue), 95%, 99%), hsl(var(--hue), 95%, 84%));
 }
 
+.likeit {
+	margin-left: 1rem;
+}
+
 .banner-name a {
 	color: black;
 }
@@ -1354,7 +1358,7 @@ body {
 	background-image: linear-gradient(-45deg, #cc3843 0%, #cb193f 100%);
 	border: none;
 	color: #fff;
-	padding: 10px 30px;
+	padding: 10px 15px;
 	border-radius: 50px;
 	min-height: 50px;
 	font-weight: 700;
